# BaseRadar

./: .gitignore  .vercelignore  CHANGELOG_BASE.md  CRON_SETUP_GUIDE.md  DEPLOYMENT.md  HUONG_DAN_DEPLOY_VERCEL.md  LOCAL_SETUP.md  QUICK_START.md  RAILWAY_CRON_SETUP.md  RAILWAY_DEPLOYMENT.md  README-MCP.md  VERCEL_MCP_DEPLOYMENT.md  VERCEL_TROUBLESHOOTING.md  VERCEL_UV_FIX.md  WINDOWS_VERCEL_DEV.md  crawlers.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  vercel-dev-cleanup.ps1  vercel-dev-restore.ps1  vercel-dev-setup.ps1  vercel.json
api/: hello.py  index.py  mcp.py  minimal.py  test.py
config/: config.yaml  frequency_words.txt
mcp_server/: __init__.py  server.py
mcp_server/services/: __init__.py  cache_service.py  data_service.py  parser_service.py
mcp_server/tools/: analytics.py  config_mgmt.py  data_query.py  search_tools.py  system.py
mcp_server/utils/: __init__.py  date_parser.py  errors.py  validators.py
output/2025-11-12/html/: 06-11.html  11-32.html  13-47.html  13-56.html  Daily_Summary.html
output/2025-11-12/txt/: 06-11.txt  11-32.txt  13-47.txt  13-56.txt
